# clipboard-qr

./: .gitignore  README.md  main.py  pyproject.toml
